# Creative-Ad-Generation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.training  Makefile  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: batch_inference.py  retrain.py
dags/: batch_inference.py  ingest_products.py  retrain.py
data/sources/: ecommerce_product_catalog.csv  openfoodfacts_sample.csv
docker/entrypoints/: api.sh  training.sh
helm/api/: Chart.yaml  values.yaml
helm/api/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: README.md
k8s/demo/: minio.yaml  mlflow.yaml
monitoring/grafana/: creative-ad-alerts.json  creative-ad-dashboard.json
pydantic/: __init__.py
src/: __init__.py
src/api/: __init__.py  main.py
src/core/: __init__.py  logging_config.py  metrics.py  settings.py
src/data/: __init__.py  dataset.py  ingest.py
src/models/: train.py
src/pipelines/: __init__.py
tests/: __init__.py  conftest.py  test_api_main.py  test_dataset.py  test_ingest.py  test_train.py
